--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,11 +1,12 @@
 body
 {
     /* background-image: url('images/background.jpeg'); */
-    background-image: url('background.jpeg');
+    background-image: url('images/background.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-color: rgb(0, 0, 0); */
+    background-color: rgb(10 79 116);
     padding: 25rem 0rem;
+    /* height: cover; */
 }
 form
 {
@@ -14,6 +15,7 @@ form
     align-items: center;
     color: white;
     font-size: 25px;
+    z-index: 1;
 }
 h1
 {
@@ -22,4 +24,13 @@ h1
     justify-content: center;
     color: white;
     font-size: 50px;
+}
+img
+{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    z-index: 3;
 }
