--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,6 +19,7 @@ form
 }
 h1
 {
+    font-family:'Courier New', Courier, monospace ;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -33,4 +34,26 @@ img
     background-repeat: no-repeat;
     background-attachment: fixed;
     z-index: 3;
+}
+label
+{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+#city, button
+{
+    margin: 10px 20px;
+    padding: 15px 15px;
+    font-weight: 900;
+    border-radius: 5px;
+    border: 0px solid red;
+}
+button:hover
+{
+    margin: 10px 20px;
+    padding: 15px 15px;
+    font-weight: 900;
+    border-radius: 5px;
+    border: 0px solid red;
+    background-color: rgb(0, 134, 207);
+    color: white;
 }
