--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,15 +8,6 @@ body
     padding: 25rem 0rem;
     /* height: cover; */
 }
-form
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 25px;
-    z-index: 1;
-}
 h1
 {
     font-family:'Courier New', Courier, monospace ;
@@ -56,4 +47,115 @@ button:hover
     border: 0px solid red;
     background-color: rgb(0, 134, 207);
     color: white;
+}
+.sky {
+    position: absolute;
+    top: 30%;
+    left: 20%;
+    width: 300px;
+    height: 200px;
+    overflow: hidden;
+}
+
+.sun {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #FFD700; /* Yellow sun color */
+    overflow: hidden;
+}
+
+.sun-face {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #FFFFFF; /* White sun face color */
+}
+
+.sun-rays {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: #FFD700; /* Yellow sun rays color */
+    transform-origin: bottom center;
+}
+
+.sun-rays:before,
+.sun-rays:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: #FFD700; /* Yellow sun rays color */
+}
+
+.sun-rays:before {
+    transform: rotate(45deg);
+}
+
+.sun-rays:after {
+    transform: rotate(-45deg);
+}
+
+.clouds {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    z-index: -1;
+}
+
+.cloud {
+    width: 80px;
+    height: 40px;
+    background-color: #FFFFFF; /* White cloud color */
+    border-radius: 50px;
+    margin: 10px;
+}
+
+.cloud:nth-child(1) {
+    position: absolute;
+    top: 0;
+    left: 20px;
+}
+
+.cloud:nth-child(2) {
+    position: absolute;
+    top: 0;
+    left: 100px;
+}
+
+.cloud:nth-child(3) {
+    position: absolute;
+    top: 0;
+    left: 180px;
+}
+
+
+
+
+form
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 25px;
+    z-index: 1;
 }
